--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <h2>行程概览</h2>
             <p>这是一次为期三天的喀什自驾游行程，带您领略帕米尔高原的壮美风景、喀什的历史风貌和浓郁的民族文化。前两晚将在塔什库尔干塔吉克自治县住宿，体验不一样的高原风情。</p>
             <div class="note">
-                <p><strong>注意：</strong>喀什地区与北京有3小时时差，当地时间比北京时间晚3小时。以下行程时间均为当地时间。</p>
+                <p><strong>注意：</strong>喀什地区与北京有3小时时差，当地时间比北京时间晚3小时。以下行程时间均为北京时间，请注意换算当地时间（例如：北京时间9:00相当于当地时间6:00）。</p>
             </div>
         </section>
 
@@ -312,31 +312,52 @@
                             </div>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">1</span><span class="time">09:00</span> 喀什市区出发</h4>
+                            <h4><span class="spot-number">1</span><span class="time">09:00</span> 起床</h4>
+                            <p>在酒店休息区享用早餐。</p>
+                            <p><span class="distance">用餐时间：约45分钟</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">2</span><span class="time">10:00</span> 喀什市区出发</h4>
                             <p>从喀什市区酒店出发，沿喀什-塔什库尔干公路前进。</p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">2</span><span class="time">11:00</span> 白沙湖</h4>
+                            <h4><span class="spot-number">3</span><span class="time">12:00</span> 白沙湖</h4>
                             <p>白沙湖是新疆著名的高山湖泊，湖水清澈，周围是壮观的沙丘和远处的雪山。</p>
-                            <p><span class="distance">游览时间：约1.5小时</span></p>
+                            <p><span class="distance">游览时间：约1小时</span></p>
                             <p><span class="drive-time">从喀什市区开车约1.5小时（90公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">3</span><span class="time">13:00</span> 木吉乡火山群</h4>
-                            <p>参观神奇的火山地貌，感受大自然的鬼斧神工。</p>
-                            <p><span class="distance">游览时间：约1小时</span></p>
+                            <h4><span class="spot-number">4</span><span class="time">13:30</span> 午餐休息</h4>
+                            <p>在前往克州冰川公园路上，在休息区简单用餐。建议自备干粮或在喀什准备好午餐盒饭。</p>
+                            <p><span class="distance">用餐时间：约30分钟</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">5</span><span class="time">14:30</span> 克州冰川国家森林公园</h4>
+                            <p>又名奥依塔克冰川公园，是一处集冰川、森林、高山草甸等自然景观于一体的国家级森林公园。</p>
+                            <p><span class="distance">游览时间：约2小时</span></p>
                             <p><span class="drive-time">从白沙湖开车约30分钟（25公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">4</span><span class="time">15:30</span> 树洞公路</h4>
+                            <h4><span class="spot-number">6</span><span class="time">17:00</span> 木吉乡火山群</h4>
+                            <p>参观神奇的火山地貌，感受大自然的鬼斧神工。</p>
+                            <p><span class="distance">游览时间：约1小时</span></p>
+                            <p><span class="drive-time">从克州冰川公园开车约30分钟（20公里）</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">7</span><span class="time">18:30</span> 树洞公路</h4>
                             <p>途经著名的树洞公路，两侧是百年胡杨，景色壮观独特。</p>
-                            <p><span class="distance">游览时间：约1.5小时</span></p>
+                            <p><span class="distance">游览时间：约1小时</span></p>
                             <p><span class="drive-time">从木吉乡开车约1小时（45公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">5</span><span class="time">18:00</span> 塔什库尔干县</h4>
+                            <h4><span class="spot-number">8</span><span class="time">21:00</span> 塔什库尔干县</h4>
                             <p>抵达塔什库尔干塔吉克自治县，办理入住。</p>
                             <p><span class="drive-time">从树洞公路开车约2小时（130公里）</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">9</span><span class="time">21:30</span> 晚餐</h4>
+                            <p>在酒店附近餐厅享用晚餐，品尝当地特色美食。</p>
+                            <p><span class="distance">用餐时间：约1小时</span></p>
                         </div>
                     </div>
 
@@ -356,39 +377,54 @@
                             </div>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">1</span><span class="time">07:30</span> 班迪尔蓝湖</h4>
+                            <h4><span class="spot-number">1</span><span class="time">09:00</span> 起床</h4>
+                            <p>在酒店享用早餐。</p>
+                            <p><span class="distance">用餐时间：约45分钟</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">2</span><span class="time">10:00</span> 班迪尔蓝湖</h4>
                             <p>清晨观赏被誉为"帕米尔高原上的蓝宝石"的班迪尔蓝湖，湖水在晨光中呈现梦幻般的蓝色。</p>
                             <p><span class="distance">游览时间：约1.5小时</span></p>
                             <p><span class="drive-time">从塔什库尔干开车约30分钟（17公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">2</span><span class="time">09:30</span> 瓦罕走廊</h4>
+                            <h4><span class="spot-number">3</span><span class="time">12:00</span> 瓦罕走廊</h4>
                             <p>探访历史悠久的丝绸之路重要通道。</p>
                             <p><span class="distance">游览时间：约1.5小时</span></p>
                             <p><span class="drive-time">从班迪尔蓝湖开车约1.5小时（83公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">3</span><span class="time">12:00</span> 盘龙古道</h4>
+                            <h4><span class="spot-number">4</span><span class="time">13:30</span> 午餐休息</h4>
+                            <p>在瓦罕走廊游客服务区简单用餐。建议自备干粮或在塔什库尔干准备好午餐盒饭。</p>
+                            <p><span class="distance">用餐时间：约30分钟</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">5</span><span class="time">14:30</span> 盘龙古道</h4>
                             <p>体验千年古道的壮美，这条蜿蜒盘旋的山路见证了古代商旅往来的历史。</p>
                             <p><span class="distance">游览时间：约1.5小时</span></p>
                             <p><span class="drive-time">从瓦罕走廊开车约30分钟（20公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">4</span><span class="time">14:00</span> 红其拉甫国门</h4>
+                            <h4><span class="spot-number">6</span><span class="time">16:30</span> 红其拉甫国门</h4>
                             <p>参观中巴边界的红其拉甫国门，感受祖国最西部的雄伟壮观。</p>
                             <p><span class="distance">游览时间：约2小时</span></p>
                             <p><span class="drive-time">从盘龙古道开车约30分钟（25公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">5</span><span class="time">17:00</span> 塔合曼湿地</h4>
+                            <h4><span class="spot-number">7</span><span class="time">19:00</span> 塔合曼湿地</h4>
                             <p>欣赏高原湿地生态系统，观赏各种鸟类。</p>
-                            <p><span class="distance">游览时间：约1.5小时</span></p>
+                            <p><span class="distance">游览时间：约1小时</span></p>
                             <p><span class="drive-time">从红其拉甫开车约1小时（95公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">6</span><span class="time">19:30</span> 返回塔什库尔干</h4>
+                            <h4><span class="spot-number">8</span><span class="time">21:00</span> 返回塔什库尔干</h4>
                             <p>返回塔什库尔干县住宿。</p>
                             <p><span class="drive-time">从塔合曼湿地开车约1小时（80公里）</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">9</span><span class="time">21:30</span> 晚餐</h4>
+                            <p>在酒店附近餐厅享用晚餐。</p>
+                            <p><span class="distance">用餐时间：约1小时</span></p>
                         </div>
                     </div>
 
@@ -408,27 +444,42 @@
                             </div>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">1</span><span class="time">08:30</span> 石头城</h4>
+                            <h4><span class="spot-number">1</span><span class="time">09:00</span> 起床</h4>
+                            <p>在酒店享用早餐。</p>
+                            <p><span class="distance">用餐时间：约45分钟</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">2</span><span class="time">10:00</span> 石头城</h4>
                             <p>参观具有两千多年历史的石头城遗址。</p>
                             <p><span class="distance">游览时间：约1小时</span></p>
                             <p><span class="drive-time">从塔什库尔干县城约10分钟（3公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">2</span><span class="time">10:00</span> 卡拉库里湖</h4>
-                            <p>欣赏被誉为"天堂湖"的卡拉库里湖美景，在此享用午餐。</p>
+                            <h4><span class="spot-number">3</span><span class="time">11:30</span> 卡拉库里湖</h4>
+                            <p>欣赏被誉为"天堂湖"的卡拉库里湖美景。</p>
                             <p><span class="distance">游览时间：约2小时</span></p>
                             <p><span class="drive-time">从石头城开车约1小时（70公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">3</span><span class="time">13:00</span> 慕士塔格冰河公园</h4>
+                            <h4><span class="spot-number">4</span><span class="time">13:30</span> 午餐</h4>
+                            <p>在卡拉库里湖景区餐厅享用午餐。</p>
+                            <p><span class="distance">用餐时间：约1小时</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">5</span><span class="time">15:00</span> 慕士塔格冰河公园</h4>
                             <p>近距离观赏雄伟的慕士塔格峰和壮观的冰川景观，徒步登高500米感受冰川的磅礴气势。</p>
-                            <p><span class="distance">游览时间：约3.5小时（含徒步和休息时间）</span></p>
+                            <p><span class="distance">游览时间：约3小时（含徒步和休息时间）</span></p>
                             <p><span class="drive-time">从卡拉库里湖开车约30分钟（20公里）</span></p>
                         </div>
                         <div class="attraction">
-                            <h4><span class="spot-number">4</span><span class="time">17:30</span> 返回喀什</h4>
+                            <h4><span class="spot-number">6</span><span class="time">19:00</span> 返回喀什</h4>
                             <p>返回喀什市区。</p>
                             <p><span class="drive-time">从慕士塔格冰河公园开车约3小时（147公里）</span></p>
+                        </div>
+                        <div class="attraction">
+                            <h4><span class="spot-number">7</span><span class="time">20:00</span> 晚餐</h4>
+                            <p>在喀什老城区享用特色晚餐。</p>
+                            <p><span class="distance">用餐时间：约1.5小时</span></p>
                         </div>
                     </div>
                 </section>
@@ -438,7 +489,7 @@
                 <h3>手机查看行程</h3>
                 <div id="qrcode"></div>
                 <p class="qr-label">扫描二维码在手机上查看行程</p>
-                <a href="amapuri://workInAmap/createWithToken?polymericId=mcp_d904006b52f943db8c0ef125f0e8c20d&from=MCP" class="amap-link">在高德地图中打开</a>
+                <a href="amapuri://workInAmap/createWithToken?polymericId=mcp_408975b6156349539d70ae1d91fadf3e&from=MCP" class="amap-link">在高德地图中打开</a>
             </div>
         </div>
     </div>
@@ -453,9 +504,10 @@
                 points: [
                     { name: "1. 喀什市区", lng: 75.989746, lat: 39.470492 },
                     { name: "2. 白沙湖", lng: 75.700000, lat: 39.200000 },
-                    { name: "3. 木吉乡火山群", lng: 75.400000, lat: 39.100000 },
-                    { name: "4. 树洞公路", lng: 75.250000, lat: 38.900000 },
-                    { name: "5. 塔什库尔干县", lng: 75.232988, lat: 37.777029 }
+                    { name: "3. 克州冰川国家森林公园", lng: 75.523549, lat: 38.980120 },
+                    { name: "4. 木吉乡火山群", lng: 75.400000, lat: 39.100000 },
+                    { name: "5. 树洞公路", lng: 75.250000, lat: 38.900000 },
+                    { name: "6. 塔什库尔干县", lng: 75.232988, lat: 37.777029 }
                 ]
             },
             // 第二天景点
@@ -587,7 +639,7 @@
 
             // 生成二维码
             new QRCode(document.getElementById('qrcode'), {
-                text: "amapuri://workInAmap/createWithToken?polymericId=mcp_d904006b52f943db8c0ef125f0e8c20d&from=MCP",
+                text: "amapuri://workInAmap/createWithToken?polymericId=mcp_408975b6156349539d70ae1d91fadf3e&from=MCP",
                 width: 200,
                 height: 200,
                 colorDark: "#000000",
